tests/models/struct/unnamed/string/fail/min_items.rs
use dade::model;
#[model]
struct TestModel (
   #[field(min_items = 2)]
    String
);
fn main() {}
